--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,1 +1,20 @@
 version: 2.1
+
+jobs:
+  run-unit-tests:
+    docker:
+      - image: cimg/openjdk:8.0.432
+    steps:
+      - checkout  # Pasul pentru a verifica codul din repo-ul tău
+      - run:
+          name: Install dependencies
+          command: |
+             mvn install -DskipTests  # Pentru proiectele Maven
+      - run:
+          name: Run unit tests
+          command: |
+             mvn test
+workflows:
+  test-workflow:
+    jobs:
+      - run-unit-tests
