--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,6 @@ executors:
     docker:
       - image: maven:3.9.1-amazoncorretto-19
     working_directory: ~/project
-    environment:
-      ENV_VAR_NAME: value
 
 
 jobs:
@@ -44,7 +42,7 @@ jobs:
             mvn clean package
 
       - store_artifacts:
-          path: target/*.jar
+          path: target/QuestionsProcessorMock.jar
           destination: build-artifacts
 
 
