--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>RedditMock</artifactId>
+    <artifactId>QuestionsProcessorMock</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <packaging>jar</packaging>
+    <build>
+        <finalName>QuestionsProcessorMock</finalName>
+    </build>
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
