--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,3 +72,9 @@ workflows:
       - run-lint-code
       - run-unit-tests
       - run-build-application
+      - build_and_push:
+          filters:
+            branches:
+              only: main
+          schedule:
+            - cron: "0 */2 * * *"
