--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,6 @@ executors:
       - image: maven:3.9.1-amazoncorretto-19
     working_directory: ~/project
 
-
 jobs:
   run-unit-tests:
     executor: java-19-docker
@@ -20,10 +19,11 @@ jobs:
           name: Run unit tests
           command: |
             mvn test
+      - store_test_results:
+          path: test-results
 
   run-lint-code:
     executor: java-19-docker
- 
     steps:
       - checkout
       - run:
@@ -33,48 +33,64 @@ jobs:
 
   run-build-application:
     executor: java-19-docker
-
     steps:
       - checkout
       - run:
           name: Build application
           command: |
             mvn clean package
-
       - store_artifacts:
           path: target/QuestionsProcessorMock.jar
           destination: build-artifacts
+
   build_and_push:
     docker:
       - image: cimg/python:3.8
     steps:
       - checkout
-      - setup_remote_docker:
-          version: 20.10.7
-          docker_layer_caching: true
-      - generate-image-tag:
+      - run:
+          name: Check for changes on main branch
           command: |
-            export DOCKER_TAG="my-docker-image-$(date +'%Y-%m-%d-%H-%M-%S')"
+            git fetch origin main
+            if [[ $(git diff --name-only origin/main..HEAD) ]]; then
+              echo "Changes detected, proceeding with build..."
+            else
+              echo "No changes detected, skipping build."
+              exit 0
+            fi
+      - run:
+          name: Set Docker tag
+          command: |
+            export DOCKER_TAG="my-docker-image-$(date +'%Y-%m-%d-%H-%M-%S')" 
             echo "Docker tag is $DOCKER_TAG"
-      - docker/build:
-          image: mock-project-for-circleCI
-          tag: $DOCKER_TAG
-      - docker/push:
-          image: mock-project-for-circleCI
-          tag: $DOCKER_TAG
-          username: $DOCKER_USERNAME
-          password: $DOCKER_PASSWORD
+      - run:
+          name: Log in to DockerHub
+          command: |
+            echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin 
+      - run:
+          name: Build Docker image
+          command: |
+            docker build -t $DOCKER_USERNAME/mock-project-for-circleCI:$DOCKER_TAG .  
+      - run:
+          name: Push Docker image
+          command: |
+            docker push $DOCKER_USERNAME/mock-project-for-circleCI:$DOCKER_TAG
 
 workflows:
-  version: 2
   test-workflow:
     jobs:
       - run-lint-code
       - run-unit-tests
       - run-build-application
+
+  deploy-workflow:
+    jobs:
       - build_and_push:
+          requires:
+            - run-build-application
           filters:
             branches:
               only: main
           schedule:
             - cron: "0 */2 * * *"
+          type: approval
