--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,11 +67,11 @@ jobs:
       - run:
           name: Build Docker image
           command: |
-            docker build -t $DOCKER_USERNAME/mock-project-for-circle-ci:$DOCKER_TAG .
+            docker build -t $DOCKER_USERNAME/mock-project-for-circle-ci:"$DOCKER_TAG" .
       - run:
           name: Push Docker image
           command: |
-            docker push $DOCKER_USERNAME/mock-project-for-circle-ci:$DOCKER_TAG
+            docker push $DOCKER_USERNAME/mock-project-for-circle-ci:"$DOCKER_TAG"
 
 workflows:
   test-workflow:
