--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,12 +84,8 @@ workflows:
       - run-build-application
 
   deploy-workflow:
-    triggers:
-        - schedule:
-            cron: "0 */2 * * *"
-            filters:
-              branches:
-                only: main
+    schedule:
+      - cron: "0 */2 * * *"
     jobs:
       - build_and_push:
           filters:
